--- a/Question-1-keyboard-accessibility.html
+++ b/Question-1-keyboard-accessibility.html
@@ -294,7 +294,7 @@ article p {
   
       <!-- Add a label for the input field -->
       <label for="emailInput">Enter your email:</label>
-      <input type="text" id="emailInput" aria-label="Enter your email address to sign up for the newsletter">
+      <input type="email" id="emailInput" aria-label="Enter your email address to sign up for the newsletter">
      
       <!-- Button triggering the function -->
       <button type="button" id="signUpButton" onclick="getFocus()" aria-describedby="redirectMessage">Sign up</button>
